--- a/exx10/src/BookList.css
+++ b/exx10/src/BookList.css
@@ -57,6 +57,6 @@ tr:hover {
   
   img {
     border-radius: 4px;
-    width: 50px; /* Set a fixed width for images */
-    height: auto; /* Maintain aspect ratio */
+    width: 50px; 
+    height: 50px; 
   }
