--- a/ex6/views/index.ejs
+++ b/ex6/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="ex6\views\styles.css">
     <title>Survey Form</title>
 </head>
 <body>
