--- a/exx10/src/Counter.css
+++ b/exx10/src/Counter.css
@@ -52,3 +52,11 @@ button{
   border-radius: 50%;
   border-color: blanchedalmond;
 }
+
+button:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+.value:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
